test/Fail/Issue580.err
Issue580.agda:5.17-24: error: [PrivateRecordField]
Record fields cannot be private
when scope checking the declaration
  A : Set
